'collect(toList())' can be replaced with 'toList()'